--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:gravity="center"
 
-        android:layout_margin="8dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         android:text="@string/searching_tasks"
@@ -32,22 +33,12 @@
         android:visibility="invisible"
         />
 
-    <View
-        android:id="@+id/separator1"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        app:layout_constraintTop_toBottomOf="@id/search_tasks_heading"
-
-        android:layout_margin="8dp"
-        android:background="@color/colorPrimary"
-        />
-
 
     <Switch
         android:id="@+id/location_type_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/separator1"
+        app:layout_constraintTop_toBottomOf="@id/search_tasks_heading"
         app:layout_constraintStart_toStartOf="parent"
 
         android:layout_margin="8dp"
@@ -60,7 +51,7 @@
         android:id="@+id/location_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/separator1"
+        app:layout_constraintTop_toBottomOf="@id/search_tasks_heading"
         app:layout_constraintEnd_toEndOf="parent"
 
         android:layout_margin="8dp"
@@ -83,22 +74,12 @@
         android:theme="@style/ColoredButton.Green"
         />
 
-    <View
-        android:id="@+id/separator2"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        app:layout_constraintTop_toBottomOf="@id/button_get_tasks"
-
-        android:layout_margin="8dp"
-        android:background="@color/colorPrimary"
-        />
-
     <TextView
         android:id="@+id/connected_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/separator2"
+        app:layout_constraintTop_toBottomOf="@id/button_get_tasks"
 
         android:layout_margin="8dp"
         android:textColor="@color/black"
@@ -111,7 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/separator2"
+        app:layout_constraintTop_toBottomOf="@id/button_get_tasks"
 
         android:layout_margin="8dp"
         android:textColor="@color/black"
@@ -132,16 +113,6 @@
         android:text="@string/database_connect"
         style="@style/Base.Widget.AppCompat.Button.Colored"
         android:theme="@style/ColoredButton.Blue"
-        />
-
-    <View
-        android:id="@+id/separator3"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        app:layout_constraintTop_toBottomOf="@id/button_db_connect"
-
-        android:layout_margin="8dp"
-        android:background="@color/colorPrimary"
         />
 
 
