--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="spikey.com.freeride.MainActivity">
+    tools:activity="spikey.com.freeride.MainActivity">
 
     <TextView
         android:id="@+id/search_tasks_heading"
