--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -18,7 +18,7 @@
     <fragment
         android:id="@+id/map_view"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        tools:context="freeride.spikey.com.freeride.TasksAndMapActivity"
+        tools:activity="freeride.spikey.com.freeride.TasksAndMapActivity"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
