--- a/app/src/main/res/layout/custom_toast_message_layout.xml
+++ b/app/src/main/res/layout/custom_toast_message_layout.xml
@@ -17,9 +17,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="16dp"
-        android:textColor="@android:color/white"
-        android:text="Limiting to fo"/>
-
-
+        android:textColor="@android:color/white"/>
 
 </android.support.v7.widget.CardView>
