--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:activity="spikey.com.freeride.taskCardsMapView.TaskDetailsActivity"
+    tools:activity="spikey.com.freeride.TaskDetailsActivity"
     android:theme="@style/TaskDetails"
     android:paddingStart="16dp"
     android:paddingTop="8dp">
