BIG commit. Handles multiple-location tasks. Database path changes. Improved task securing. Task class changes

--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/task_details_recycler_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,125 +9,5 @@
     tools:activity="spikey.com.freeride.TaskDetailsActivity"
     android:theme="@style/TaskDetails"
     android:paddingStart="16dp"
-    android:paddingTop="8dp">
-
-
-    <TextView
-        android:id="@+id/task_details_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:text="Title " />
-    <TextView
-        android:id="@+id/task_details_title_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/task_details_title"
-        android:layout_alignBaseline="@id/task_details_title"
-        android:textSize="18sp"
-        tools:text="Task_title" />
-
-
-    <TextView
-        android:id="@+id/task_details_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/task_details_title"
-        android:text="Description " />
-    <TextView
-        android:id="@+id/task_details_desc_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/task_details_desc"
-        android:layout_alignBaseline="@id/task_details_desc"
-        android:textSize="18sp"
-        tools:text="Task_desc" />
-
-
-    <TextView
-        android:id="@+id/task_details_incentive"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/task_details_desc"
-        android:text="Points " />
-    <TextView
-        android:id="@+id/task_details_incentive_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/task_details_incentive"
-        android:layout_alignBaseline="@id/task_details_incentive"
-        android:textSize="18sp"
-        tools:text="Task_incentive" />
-
-
-    <TextView
-        android:id="@+id/task_details_start_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/task_details_incentive"
-        android:text="Start " />
-    <TextView
-        android:id="@+id/task_details_start_location_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/task_details_start_location"
-        android:layout_alignBaseline="@id/task_details_start_location"
-        android:textSize="18sp"
-        tools:text="Task_start_loc" />
-
-
-    <TextView
-        android:id="@+id/task_details_end_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/task_details_start_location"
-        android:text="End " />
-    <TextView
-        android:id="@+id/task_details_end_location_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/task_details_end_location"
-        android:layout_alignBaseline="@id/task_details_end_location"
-        android:textSize="18sp"
-        tools:text="Task_end_loc" />
-
-
-    <TextView
-        android:id="@+id/task_details_duration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/task_details_end_location"
-        android:text="Duration " />
-    <TextView
-        android:id="@+id/task_details_duration_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/task_details_duration"
-        android:layout_alignBaseline="@id/task_details_duration"
-        android:textSize="18sp"
-        tools:text="Task_duration" />
-
-
-    <TextView
-        android:id="@+id/task_details_distance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/task_details_duration"
-        android:text="Distance " />
-    <TextView
-        android:id="@+id/task_details_distance_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/task_details_distance"
-        android:layout_alignBaseline="@id/task_details_distance"
-        android:textSize="18sp"
-        tools:text="Task_distance" />
-
-</RelativeLayout>
+    android:paddingTop="8dp"
+    android:paddingBottom="16dp"/>
